public/stylesheets/style.css
body * {font-family: Arial, Helvetica, sans-serif;}
* {box-sizing: border-box}

/* Full-width input fields */
input[type=email], input[type=password], input[type=text], input[type=date]{
  width: 100%;
  padding: 15px;
  margin: 5px 0 22px 0;
  display: inline-block;
  border: none;
  background: #f1f1f1;
}

input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, input[type=date]:focus {
  background-color: #ddd;
  outline: none;
}

hr {
  border: 1px solid #f1f1f1;
  margin-bottom: 25px;
}

/* Set a style for all buttons */
button {
  background-color: #04AA6D;
  color: white;
  padding: 14px 20px;
  margin: 0 auto;
  border: none;
  cursor: pointer;
  width: 50%;
  opacity: 0.9;
}

.centerbutton {
  margin: auto;
  text-align: center;  
}

.center {
  margin: auto;
  width: 50%;
}


button:hover {
  opacity:1;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/* Add padding to container elements */
.container {
  padding: 16px;
}

/* Clear floats */
.clearfix::after {
  content: "";
  clear: both;
  display: table;
}
.navigation-bar {
  width: 100%;  /* i'm assuming full width */
  height: 150px; /* change it to desired width */
  background-color: rgb(235, 82, 82); /* change to desired color */
}
.logo {
  display: inline-block;
  vertical-align: top;
  width: 125px;
  height: 125px;
  margin-right: 20px;
  margin-left: 10px;
  margin-top: 15px;    /* if you want it vertically middle of the navbar. */
}
nav button {
  float: left;
  vertical-align: top;
  background-color: rgb(243, 106, 106);
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: 20%;
  opacity: 1.0;
  font-size: 20px;
}

nav button:hover {
  opacity: 0.8;
}

/* .navigation-bar > a {
  display: inline-block;
  vertical-align: center;
  margin-right: 20px;
  height: 20px;       
  line-height: 80px;    
  color: white;
} 

.navigation-bar > a:hover{
  opacity: 0.5;
} */

/* Style buttons */
.dltbtn {
  background-color: rgb(69, 170, 119); /* Blue background */
  border: none; /* Remove borders */
  color: white; /* White text */
  padding: 8px 15px; /* Some padding */
  font-size: 16px; /* Set a font size */
  width: 10%;
  border-radius: 2px;
  margin-right: 10px;
  cursor: pointer; /* Mouse pointer on hover */
}

/* Darker background on mouse-over */
.dltbtn:hover {
  background-color: rgb(225, 65, 65);
}
.btn-text-right{
	text-align: right;	
}

.btn-text-left{
	text-align: left;	
}

/* Change styles for cancel button and signup button on extra small screens */


/* Add a card effect for articles */
.card {
  margin: auto;
  background-color: #d3d3d3;
  padding: 20px;
  margin-top: 20px;
  max-width: 600px;
  border-radius: 20px;
}

.post-user {
  background-color: darkgrey;
  display: inline-block;
  border-radius: 2px;
  color: white;
  margin: 10px; 
  padding: 0.45rem;
  min-width: 1rem;
}

.post-date {
  background-color: darkgrey;
  display: inline-block;
  border-radius: 2px;
  color: white;
  margin: 10px; 
  padding: 0.45rem;
  min-width: 1rem;
  text-align: right;
}
.post-comment-box {
  width: 100%;
  padding: 10px;
  margin: 5px 0 22px 0;
  display: inline-block;
  font-size: 14px;
  border: none;
  background: #f1f1f1;
}

.post-message {
  background-color: white;
  border-radius: 2px;
  color: black;
  font-size: 18px;
  margin: 10px; 
  padding: 0.45rem;
}


.new-post {
  margin: auto;
  background-color: #e8a7a7;
  padding: 20px;
  margin-top: 20px;
  max-width: 600px;
  border-radius: 20px;
}

textarea {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.new-field {
  font-size: 18px;
  resize: none;
  width: 85%;
}

.bio {
  font-size: 18px;
  resize: none;
  width: 100%;
}

.post-button {
  max-height: 90px;
  max-width: 100px;
}

.timeline {
  margin: auto;
  margin-top: 20px;
  max-width: 600px;
  color:rgb(200, 4, 4)
}

table {
  margin: auto;
  border-collapse: collapse;
  min-width: 60%;
}

td {
  border: 1px solid;
  padding: 8px;
}

tr:nth-child(even) {
  background-color: #ffc0c0;
}

.title {
  margin: auto;
  width: 300px;
}

/* Style the buttons that are used to open and close the accordion panel */
.accordion {
  margin: auto;
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  max-width: 600px;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  display: block;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.accordion:hover {
  background-color: #ccc;
}

.accordion:after {
  content: '\002B';
  color: #777;
  font-weight: bold;
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "\2212";
}

.panel {
  margin: auto;
  max-width: 600px;
  padding: 0 18px;
  background-color: white;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

.main-page {
  margin: auto;
  width: 80%;
}

.home-page-button {
  width: 100%;
  text-align: center;

}

.box-left {
  float: left;
}

.box-right {
  float: right;
}

